@@ -785,14 +785,10 @@ slsr_process_phi (gphi *phi, bool speed)
 		savings += stmt_cost (arg_stmt, speed);
 	    }
 	}
-      else
+      else if (SSA_NAME_IS_DEFAULT_DEF (arg))
 	{
 	  derived_base_name = arg;
-
-	  if (SSA_NAME_IS_DEFAULT_DEF (arg))
-	    arg_bb = single_succ (ENTRY_BLOCK_PTR_FOR_FN (cfun));
-	  else
-	    gimple_bb (SSA_NAME_DEF_STMT (arg));
+	  arg_bb = single_succ (ENTRY_BLOCK_PTR_FOR_FN (cfun));
 	}
 
       if (!arg_bb || arg_bb->loop_father != cand_loop)
